--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="{% static "img/fav/fav.ico" type="image" %}">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static "img/fav/apple-touch-icon.png" %}">
-    <link rel="icon" type="image/png" sizes="32x32" href= "{% static "img/fav/favicon-32x32.png" %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static "img/fav/favicon-16x16.png" %}">
+    <link rel="icon" href="img/fav/fav.ico" type="image">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href= "img/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#fffff">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -20,6 +20,7 @@
   <body>
     <header>
       {% include 'includes/header.html' %}
+
     </header>
     {% block content %}
       Контент не подвезли
