--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Используется html 5 версии -->
+{% extends 'base.html' %}
 <html lang="ru"> <!-- Язык сайта - русский -->
   <head>    
     <meta charset="utf-8"> <!-- Кодировка сайта -->
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header>
-      
+            {% include 'includes/header.html' %}
     </header>
     <main>
       <!-- класс py-5 создает отступы сверху и снизу блока -->
@@ -94,3 +94,4 @@
     </footer>
   </body>
 </html>
+
