--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,10 +1,24 @@
 {% extends 'base.html' %}
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>Главная страница</h1>
-</body>
-</html>
+{% block page-title %}Последние обновления на сайте{% endblock page-title %}
+{% block content %}
+<main>
+      <!-- класс py-5 создает отступы сверху и снизу блока -->
+      <div class="container py-5">
+        <h1>Последние обновления на сайте</h1>
+                {% for post in posts %}
+                  <ul>
+                    <li>
+                      Автор: {{ post.author.get_full_name }}
+                    </li>
+                    <li>
+                      Дата публикации: {{ post.pub_date|date:"d E Y" }}
+                    </li>
+                  </ul>
+                  <p>{{ post.text }}</p>
+                  <a href="">все записи группы</a>
+                  {% if not forloop.last %}<hr>{% endif %}
+                {% endfor %}
+        <!-- под последним постом нет линии -->
+      </div>
+    </main>
+{% endblock %}
