--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -15,7 +15,7 @@
                     </li>
                   </ul>
                   <p>{{ post.text }}</p>
-                  <a href="">все записи группы</a>
+                  <a href="{% url 'posts:group_list' post.group.slug %}">Все записи группы</a>
                   {% if not forloop.last %}<hr>{% endif %}
                 {% endfor %}
         <!-- под последним постом нет линии -->
