--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,25 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-<html lang="ru"> <!-- Язык сайта - русский -->
-  <head>    
-    <meta charset="utf-8"> <!-- Кодировка сайта -->
-    <!-- Сайт готов работать с мобильными устройствами -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Загружаем фав-иконки -->
-    <link rel="icon" href="img/fav/fav.ico" type="image">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
-    <meta name="msapplication-TileColor" content="#000">
-    <meta name="theme-color" content="#ffffff">
-    <!-- Подключен файл со стандартными стилями бустрап -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <title>Лев Толстой – зеркало русской революции.</title>
-  </head>
-  <body>
     <main>
-      <!-- класс py-5 создает отступы сверху и снизу блока -->
       <div class="container py-5">
+         <h2> Записи сообщества </h2>
+          <br>
          {% for post in page_obj %}
                   <ul>
                     <li>
