--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -2,10 +2,9 @@
 {% block page-title %}Последние обновления на сайте{% endblock page-title %}
 {% block content %}
 <main>
-      <!-- класс py-5 создает отступы сверху и снизу блока -->
       <div class="container py-5">
         <h1>Последние обновления на сайте</h1>
-                {% for post in posts %}
+                {% for post in page_obj %}
                   <ul>
                     <li>
                       Автор: {{ post.author.get_full_name }}
@@ -18,7 +17,7 @@
                   <a href="{% url 'posts:group_list' post.group.slug %}">Все записи группы</a>
                   {% if not forloop.last %}<hr>{% endif %}
                 {% endfor %}
-        <!-- под последним постом нет линии -->
+          {% include 'includes/paginator.html' %}
       </div>
     </main>
 {% endblock %}
